Height for actress div amended to avoid cut off on larger screens. Name corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,7 @@ footer {
     .actress {
         width: 30%;
         margin: 20px;
-        height: 330px;
+        height: 380px;
     }
 
     .left {
